# crosspad

./: .gitignore  .merlin  CHANGELOG.md  LICENSE  Makefile  README.md  _oasis  _tags  crosspad.install  crosspad.opam  cursor.ml  dune  dune-project  file.ml  gtkgui.ml  gui.ml  myocamlbuild.ml  run_test.sh  setup.ml  tkgui.ml  types.ml  xword.ml
frontend/: cli.ml  gtkgui.ml  tkgui.ml
opam/: descr  opam
plugins/aclite/: ac_text.ml  ac_text.mli  puz.ml  puz.mli  puz_match.ml  puz_types.ml  puz_utils.ml
plugins/puz/: puz.ml  puz_bin.ml  puz_binreader.ml  puz_match.ml  puz_types.ml  puz_utils.ml
src/: converter.ml  file.ml  types.ml  utils.ml  xword.ml
src/converter/: .merlin  ac_text.ml  ac_text.mli  converter.ml  converter.mldylib  converter.mllib  dune  exolve.ml  file.ml  json.ml  json.mli  json_reader.ml  puz.ml  puz.mli  puz_bin.ml  puz_bit.ml  puz_match.ml  puz_types.ml  puz_utils.ml  qxw.ml  reddit.ml  test_bit.ml  text.ml  text_match.ml  xw_json.ml  xw_json.mli
src/frontend/: .merlin  cli.ml  dune  gtkgui.ml  opium_web.ml  tkgui.ml
src/model/: .merlin  crosspad-model.mllib  crosspad_model.ml  dune  jbuild
src/plugins/aclite/: ac_text.ml  puz.ml  puz_bin.ml  puz_match.ml  puz_utils.ml
src/plugins/json/: json.ml
src/xword/: .merlin  META  crosspad_model.ml  cursor.ml  dune  json.ml  json_reader.ml  typedefs.ml  typedefs.mli  utils.ml  xword.ml  xword.mldylib  xword.mli  xword.mllib
